hdf5-derive/tests/compile-fail/empty-enum.stderr
error: cannot derive `H5Type` for empty enums
 --> $DIR/empty-enum.rs:7:6
  |
7 | enum Foo {}
  |      ^^^
